syntax = "proto3";

package rahkaran.service;

option csharp_namespace = "Parstech.Shop.Shared.Protos.Rahkaran";

service RahkaranService {
  rpc GetAllRahkaranData (GetRahkaranDataRequest) returns (RahkaranAllResponse) {}
  rpc GetRahkaranOrder (GetRahkaranOrderRequest) returns (RahkaranOrderResponse) {}
  rpc CreateRahkaranOrder (CreateRahkaranOrderRequest) returns (RahkaranOrderResponse) {}
  rpc UpdateRahkaranOrder (UpdateRahkaranOrderRequest) returns (RahkaranOrderResponse) {}
  rpc GetRahkaranUser (GetRahkaranUserRequest) returns (RahkaranUserResponse) {}
  rpc CreateRahkaranUser (CreateRahkaranUserRequest) returns (RahkaranUserResponse) {}
  rpc UpdateRahkaranUser (UpdateRahkaranUserRequest) returns (RahkaranUserResponse) {}
  rpc GetRahkaranProduct (GetRahkaranProductRequest) returns (RahkaranProductResponse) {}
  rpc CreateRahkaranProduct (CreateRahkaranProductRequest) returns (RahkaranProductResponse) {}
  rpc UpdateRahkaranProduct (UpdateRahkaranProductRequest) returns (RahkaranProductResponse) {}
  rpc SendOrderToApi (SendOrderToApiRequest) returns (ApiResponse) {}
  rpc FollowOrderFromApi (FollowOrderFromApiRequest) returns (ApiResponse) {}
}

message GetRahkaranDataRequest {
  int32 order_id = 1;
}

message GetRahkaranOrderRequest {
  int32 id = 1;
}

message CreateRahkaranOrderRequest {
  RahkaranOrderDto order = 1;
}

message UpdateRahkaranOrderRequest {
  RahkaranOrderDto order = 1;
}

message GetRahkaranUserRequest {
  int32 id = 1;
}

message CreateRahkaranUserRequest {
  RahkaranUserDto user = 1;
}

message UpdateRahkaranUserRequest {
  RahkaranUserDto user = 1;
}

message GetRahkaranProductRequest {
  int32 id = 1;
}

message CreateRahkaranProductRequest {
  RahkaranProductDto product = 1;
}

message UpdateRahkaranProductRequest {
  RahkaranProductDto product = 1;
}

message SendOrderToApiRequest {
  int32 order_id = 1;
}

message FollowOrderFromApiRequest {
  int32 order_id = 1;
}

message RahkaranOrderDto {
  int32 order_id = 1;
  string order_code = 2;
  string rahkaran_pish_number = 3;
  string rahakaran_factor_number = 4;
  string rahakaran_factor_serial = 5;
}

message RahkaranUserDto {
  int32 id = 1;
  string user_name = 2;
  string first_name = 3;
  string last_name = 4;
  string economic_code = 5;
  string national_code = 6;
  int32 user_id = 7;
  string rahkaran_user_id = 8;
}

message RahkaranProductDto {
  int32 stock_id = 1;
  int32 detail_id = 2;
  int32 count = 3;
  int64 price = 4;
  string name = 5;
  string code = 6;
  string variation_name = 7;
  int32 product_id = 8;
  string rahkaran_product_id = 9;
  int32 rahkaran_unit_id = 10;
}

message RahkaranAllResponse {
  RahkaranOrderDto order = 1;
  RahkaranUserDto customer = 2;
  repeated RahkaranProductDto products = 3;
}

message RahkaranOrderResponse {
  bool is_success = 1;
  string message = 2;
  RahkaranOrderDto order = 3;
}

message RahkaranUserResponse {
  bool is_success = 1;
  string message = 2;
  RahkaranUserDto user = 3;
}

message RahkaranProductResponse {
  bool is_success = 1;
  string message = 2;
  RahkaranProductDto product = 3;
}

message ApiResponse {
  bool is_success = 1;
  string message = 2;
} 